# ADCManager

./: .gitignore  CMakeLists.txt  Readme.md
pru/demos/pru-software-support-package/: .gitignore
pru/demos/pru-software-support-package/include/: pru_rpmsg.h  pru_virtqueue.h
pru/demos/pruadc1/: pru0adc.c
pru/demos/pruadc1/doc/PRUADC1latex/: PRUADC1.tex
pru/demos/pruadc1/doc/PRUADC1latex/cover/: cover.tex
pru/demos/pruadc1/user_space/: fork_pcm_pru.c  test.c
pru/overlay/: SAMPLER-GPIO-00A0.dtbo  SAMPLER-GPIO.dts  SAMPLER-LCD.dts  build.sh
pru/src/: Makefile  pru0adc.c  pru1adc.c
src/: ADCManager.cpp
